--- a/Aider.chat/.env-sample
+++ b/Aider.chat/.env-sample
@@ -1,5 +1,5 @@
 MODEL=deepseek/deepseek-chat
-API-KEY=sk-7bee35badac54e81aac6339d00382cd6
+API-KEY=key
 AIDER_MODEL=deepseek/deepseek-chat
 AIDER_CHAT_LANGUAGE=hungarian
 AIDER_DARK_MODE=true
